--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,9 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.ShoesShop" parent="Base.Theme.ShoesShop" />
+    <style name="Theme.ShoesShop" parent="Base.Theme.ShoesShop" >
+        
+        <item name="android:windowTranslucentNavigation"> true </item>
+        
+    </style>
 </resources>
