Inicio do layout da tela principal

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/purple_button_bg"
-            android:text="@string/tv_lets_get_started"
+            android:text="@string/lets_get_started"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@+id/tv_intro_text"
