--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -53,7 +53,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:background="@drawable/purple_button_bg"
+            android:background="@drawable/purple_bg"
             android:text="@string/lets_get_started"
             android:textColor="@color/white"
             android:textSize="18sp"
